# OS

./: .gitignore
LW1/: CMakeLists.txt  common.h  creator.cpp  creator_func.cpp  creator_func.h  main.cpp  reporter.cpp  reporter_func.cpp  reporter_func.h
LW1/tests/: CMakeLists.txt  test_creator.cpp  test_reporter.cpp
LW2/: CMakeLists.txt  avarage.cpp  common.h  main.cpp  min_max.cpp
LW2/tests/: CMakeLists.txt  test_main.cpp
